--- a/workshop_app/templates/workshop_app/workshop_type_list.html
+++ b/workshop_app/templates/workshop_app/workshop_type_list.html
@@ -15,27 +15,25 @@
         <br>
     {% endif %}
 	<div class="container">
-		<table class="table table-hover">
-		  <thead>
-		    <tr>
-		      <th>Sr No</th>
-		      <th>Workshop Name</th>
-		      <th>Workshop Duration (Days)</th>
-		      <th>Action</th>
-		    </tr>
-		  </thead>
-
-		{% for w in workshop_type %}
-		  <tbody>
-		    <tr  >
-		      <td scope="row" id="{{ forloop.counter }}">{{ forloop.counter }}</td>
-		      <td>{{ w.name }}</td>
-		      <td>{{ w.duration }}</td>
-		      <td><a href="{% url 'workshop_app:workshop_type_details' w.id %}" class="btn btn-outline-info" class="accordion-toggle" >View Workshop Details</a></td>
-		    </tr>
-		  </tbody>
-		 {% endfor %}
-		</table>
+		<div class="row">
+    {% for w in workshop_type %}
+			<div class="col-md-6 col-lg-4 mb-4">
+				<div class="card h-100 shadow-sm">
+					<div class="card-body d-flex flex-column">
+						<h5 class="card-title">{{ w.name }}</h5>
+						<p class="card-text text-muted">Duration: {{ w.duration }} Days</p>
+						<a href="{% url 'workshop_app:workshop_type_details' w.id %}" class="btn btn-primary mt-auto">View Details</a>
+					</div>
+				</div>
+			</div>
+		{% empty %}
+			<div class="col">
+				<div class="alert alert-info" role="alert">
+					No workshop types have been created yet.
+				</div>
+			</div>
+		{% endfor %}
+		</div>
 	</div>
 
 	    <!-- The Modal -->
