--- a/workshop_app/templates/workshop_app/register.html
+++ b/workshop_app/templates/workshop_app/register.html
@@ -1,5 +1,73 @@
 {% extends 'workshop_app/base.html' %}
 
+{% block title %}Register{% endblock %}
+
+{% block content %}
+<div class="container mt-5 pt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow-sm">
+                <div class="card-body p-4">
+                    <h2 class="card-title text-center mb-4">Create an Account</h2>
+                    <form method="post">
+                        {% csrf_token %}
+
+                        {% if form.non_field_errors %}
+                            <div class="alert alert-danger" role="alert">
+                                {% for error in form.non_field_errors %}
+                                    {{ error }}
+                                {% endfor %}
+                            </div>
+                        {% endif %}
+
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="{{ form.first_name.id_for_label }}" class="form-label">First Name</label>
+                                <input type="text" name="first_name" id="{{ form.first_name.id_for_label }}" class="form-control" required>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="{{ form.last_name.id_for_label }}" class="form-label">Last Name</label>
+                                <input type="text" name="last_name" id="{{ form.last_name.id_for_label }}" class="form-control" required>
+                            </div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="{{ form.email.id_for_label }}" class="form-label">Email address</label>
+                            <input type="email" name="email" id="{{ form.email.id_for_label }}" class="form-control" required>
+                        </div>
+                        
+                        <div class="mb-3">
+                            <label for="{{ form.username.id_for_label }}" class="form-label">Username</label>
+                            <input type="text" name="username" id="{{ form.username.id_for_label }}" class="form-control" required>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="{{ form.password.id_for_label }}" class="form-label">Password</label>
+                                <input type="password" name="password" id="{{ form.password.id_for_label }}" class="form-control" required>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="{{ form.password2.id_for_label }}" class="form-label">Confirm Password</label>
+                                <input type="password" name="password2" id="{{ form.password2.id_for_label }}" class="form-control" required>
+                            </div>
+                        </div>
+
+                        <div class="d-grid">
+                            <button type="submit" class="btn btn-primary">Register</button>
+                        </div>
+                    </form>
+                    <hr>
+                    <div class="text-center">
+                        <p>Already have an account? <a href="{% url 'login' %}">Login here</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
+<!-- {% extends 'workshop_app/base.html' %}
+
 	{% block title %}
 		Register
 	{% endblock %}
@@ -29,7 +97,7 @@
 
 				<button class="btn btn-primary" type="submit">Register</button>
 		</form><br>
-		<!-- Activate when Instructor registeration starts -->
-		<br>
+		 Activate when Instructor registeration starts -->
+		<!-- <br>
 	</div>
-{% endblock %}
+{% endblock %} -->
