docs: Complete README and finalize project

--- a/workshop_app/templates/registration/password_change_form.html
+++ b/workshop_app/templates/registration/password_change_form.html
@@ -35,7 +35,13 @@ Change Password
                 {% for field in form %}
                     <tr>
                         <td>{{ field.label }}</td>
-                        <td>{{ field }} <small>{{ field.help_text }}</small></td>
+                        <td>
+                            {% if field.name == 'new_password1' %}
+                                <div style="margin-bottom: 1.5rem;">{{ field }} <small>{{ field.help_text }}</small></div>
+                            {% else %}
+                                {{ field }} <small>{{ field.help_text }}</small>
+                            {% endif %}
+                        </td>
                     </tr>
                 {% endfor %}
             </table>
