--- a/workshop_app/templates/workshop_app/login.html
+++ b/workshop_app/templates/workshop_app/login.html
@@ -1,57 +1,3 @@
-<!-- {% extends 'workshop_app/base.html' %}
-
-{% block title %}
-    Login
-{% endblock %}
-
-{% block content %}
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6 col-md-offset-6">
-                <div class="card">
-                    <div class="card-body">
-                        <form class="px-3 py-3" method="post">
-                        {% csrf_token %}
-                        {% if form.errors %}
-                            {% for field in form %}
-                                {% for error in field.errors %}
-                                    <div class="alert alert-dismissible alert-danger">
-                                        <button type="button" class="close" data-dismiss="alert">
-                                            <i class="fa fa-close"></i>
-                                        </button>
-                                        <strong>{{ error|escape }}</strong>
-                                    </div>
-                                {% endfor %}
-                            {% endfor %}
-                            {% for error in form.non_field_errors %}
-                                <div class="alert alert-dismissible alert-danger">
-                                    <button type="button" class="close" data-dismiss="alert">
-                                        <i class="fa fa-close"></i>
-                                    </button>
-                                    <strong>{{ error|escape }}</strong>
-                                </div>
-                            {% endfor %}
-                        {% endif %}
-                        <div class="form-group">
-                          <label for="id_username">Username</label>
-                          {{ form.username }}
-                        </div>
-                        <div class="form-group">
-                          <label for="id_password">Password</label>
-                          {{ form.password }}
-                        </div>
-                        <button type="submit" class="btn btn-primary">Sign in</button>
-                        </form>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="{% url 'workshop_app:register' %}">New around here? Sign up</a>
-                        <a class="dropdown-item" href="{% url 'password_reset' %}">Forgot password?</a>
-                    </div>
-                </div>  
-            </div>
-        </div>
-    </div>
-{% endblock %} -->
-
 {% extends 'workshop_app/base.html' %}
 
 {% block title %}
@@ -83,7 +29,9 @@
                 </div>
                 <div class="card-footer text-end">
                      <a href="{% url 'workshop_app:workshop_type_list' %}" class="btn btn-secondary">Back to List</a>
-                     <a href="{% url 'workshop_app:edit_workshop_type' workshop_type.id %}" class="btn btn-primary">Edit</a>
+                     {% if workshop_type %}
+                         <a href="{% url 'workshop_app:edit_workshop_type' workshop_type.id %}" class="btn btn-primary">Edit</a>
+                     {% endif %}
                 </div>
             </div>
         </div>
